--- a/Software/StaffManagementTool/src/app/footer/footer.component.html
+++ b/Software/StaffManagementTool/src/app/footer/footer.component.html
@@ -1,3 +1,18 @@
-<p>
-  footer works!
-</p>
+<!--
+<div class="container">
+  <nav class="navbar navbar-inverse bg-success">
+    <p>privacy policy</p>
+    <p>user@semanticbits.com</p>
+    <p><mark>CopyRights&copy;2017@SemanticBits.com</mark></p>
+  </nav>
+</div>
+-->
+<!--<tag-input [ngModel]="['@item']"
+           [onlyFromAutocomplete]="true">
+  <tag-input-dropdown [showDropdownIfEmpty]="true"
+                      [autocompleteItems]="['iTem1', 'item2', 'item3']">
+    <template let-item="item" let-index="index">
+      {{ index }}: {{ item.display }}
+    </template>
+  </tag-input-dropdown>
+</tag-input>-->
