--- a/Software/StaffManagementTool/src/app/header/header.component.html
+++ b/Software/StaffManagementTool/src/app/header/header.component.html
@@ -1,7 +1,20 @@
 <div class="container">
   <div class="jumbotron">
     <nav class="navbar navbar-inverse bg-primary">
-      <h1>Staff Management Tool</h1>
+      <h2>Staff Management Tool</h2>
     </nav>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li ><a routerLink="home"><h4>Home</h4></a></li>
+          <li ><a routerLink="projectDetails"><h4>ProjectDetails</h4></a></li>
+          <li ><a routerLink="staffDetails"><h4>StaffMembers</h4></a></li>
+        </ul>
+      </div>
+    </nav>
+
   </div>
 </div>
+
+
+
